k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attribution-api
  labels:
    app: attribution-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: attribution-api
  template:
    metadata:
      labels:
        app: attribution-api
    spec:
      containers:
        - name: fastapi
          image: mini-attribution-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
