k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attribution-api
spec:
  type: ClusterIP
  selector:
    app: attribution-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
