k8s/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attribution-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: attribution.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attribution-api
                port:
                  number: 80
